==> openmv/openmv/src/omv/ports/mimxrt/omv_csi.c <==
#include <string.h>
#include <stdint.h>
#include <stdbool.h>
#include "py/mphal.h"
#include "fsl_csi.h"
#include "mimxrt_hal.h"
#include "omv_boardconfig.h"
#include "omv_gpio.h"
#include "omv_i2c.h"
#include "omv_csi.h"
#include "framebuffer.h"
#include "unaligned_memcpy.h"
#define DMA_LENGTH_ALIGNMENT    (8)
#define MIN_EDMA_DST_INC        (4)
#define CSI_IRQ_FLAGS    (CSI_CR1_SOF_INTEN_MASK            \
                          | CSI_CR1_FB2_DMA_DONE_INTEN_MASK \
                          | CSI_CR1_FB1_DMA_DONE_INTEN_MASK)

int omv_csi_init() {
    int init_ret = 0;

    mimxrt_hal_csi_init(CSI);

    #if defined(OMV_CSI_POWER_PIN)
    omv_gpio_write(OMV_CSI_POWER_PIN, 1);
    #endif

    #if defined(OMV_CSI_RESET_PIN)
    omv_gpio_write(OMV_CSI_RESET_PIN, 1);
    #endif

    // Reset the csi state
    memset(&csi, 0, sizeof(omv_csi_t));

    // Set default snapshot function.
    // Some sensors need to call snapshot from init.
    csi.snapshot = omv_csi_snapshot;

    // Configure the csi external clock (XCLK).
    if (omv_csi_set_clk_frequency(OMV_CSI_CLK_FREQUENCY) != 0) {
        // Failed to initialize the csi clock.
        return OMV_CSI_ERROR_TIM_INIT_FAILED;
    }

    // Detect and initialize the image sensor.
    if ((init_ret = omv_csi_probe_init(OMV_CSI_I2C_ID, OMV_CSI_I2C_SPEED)) != 0) {
        // Sensor probe/init failed.
        return init_ret;
    }

    // Configure the CSI interface.
    if (omv_csi_config(OMV_CSI_CONFIG_INIT) != 0) {
        // CSI config failed
        return OMV_CSI_ERROR_CSI_INIT_FAILED;
    }

    // Set default color palette.
    csi.color_palette = rainbow_table;

    // Disable VSYNC IRQ and callback
    omv_csi_set_vsync_callback(NULL);

    // Disable Frame callback.
    omv_csi_set_frame_callback(NULL);

    // All good!
    csi.detected = true;

    return 0;
}

int omv_csi_config(omv_csi_config_t config) {
    if (config == OMV_CSI_CONFIG_INIT) {
        CSI_Reset(CSI);
        NVIC_DisableIRQ(CSI_IRQn);

        // CSI_Reset does not zero CR1.
        CSI_REG_CR1(CSI) = 0;
        // CSI mode: HSYNC, VSYNC, and PIXCLK signals are used.
        CSI_REG_CR1(CSI) |= CSI_CR1_GCLK_MODE(1U);
        // Synchronous FIFO clear.
        // RXFIFO and STATFIFO are cleared on every SOF.
        CSI_REG_CR1(CSI) |= CSI_CR1_FCC_MASK;

        // Configure VSYNC, HSYNC and PIXCLK signals.
        CSI_REG_CR1(CSI) |= CSI_CR1_EXT_VSYNC_MASK;
        CSI_REG_CR1(CSI) |= !csi.vsync_pol ? CSI_CR1_SOF_POL_MASK    : 0;
        CSI_REG_CR1(CSI) |= !csi.hsync_pol ? CSI_CR1_HSYNC_POL_MASK  : 0;
        CSI_REG_CR1(CSI) |= csi.pixck_pol ? CSI_CR1_REDGE_MASK      : 0;

        // Stride config: No stride.
        CSI_REG_FBUF_PARA(CSI) = 0;
        // Reset frame counter
        CSI_REG_CR3(CSI) |= CSI_CR3_FRMCNT_RST_MASK;

        // Configure CSI FIFO depth and DMA burst size.
        CSI_REG_CR2(CSI) |= CSI_CR2_DMA_BURST_TYPE_RFF(3U);
        CSI_REG_CR3(CSI) |= 7U << CSI_CR3_RxFF_LEVEL_SHIFT;

        // Configure DMA buffers.
        CSI_REG_DMASA_FB1(CSI) = (uint32_t) (&_line_buf[OMV_LINE_BUF_SIZE * 0]);
        CSI_REG_DMASA_FB2(CSI) = (uint32_t) (&_line_buf[OMV_LINE_BUF_SIZE / 2]);

        // Write to memory from first completed frame.
        // DMA CSI addr switch at dma transfer done.
        CSI_REG_CR18(CSI) |= CSI_CR18_MASK_OPTION(0);
    }
    return 0;
}

int omv_csi_abort(bool fifo_flush, bool in_irq) {
    NVIC_DisableIRQ(CSI_IRQn);
    CSI_DisableInterrupts(CSI, CSI_IRQ_FLAGS);
    CSI_REG_CR3(CSI) &= ~CSI_CR3_DMA_REQ_EN_RFF_MASK;
    CSI_REG_CR18(CSI) &= ~CSI_CR18_CSI_ENABLE_MASK;
    csi.dest_inc = 0;
    csi.first_line = false;
    csi.drop_frame = false;
    csi.last_frame_ms = 0;
    csi.last_frame_ms_valid = false;
    if (fifo_flush) {
        framebuffer_flush_buffers(true);
    } else if (!csi.disable_full_flush) {
        framebuffer_flush_buffers(false);
    }
    return 0;
}

int omv_csi_set_clk_frequency(uint32_t frequency) {
    if (frequency >= 24000000) {
        CLOCK_SetDiv(kCLOCK_CsiDiv, 0);
    } else if (frequency >= 12000000) {
        CLOCK_SetDiv(kCLOCK_CsiDiv, 1);
    } else if (frequency >= 8000000) {
        CLOCK_SetDiv(kCLOCK_CsiDiv, 2);
    } else if (frequency >= 6000000) {
        CLOCK_SetDiv(kCLOCK_CsiDiv, 3);
    } else if (frequency >= 4000000) {
        CLOCK_SetDiv(kCLOCK_CsiDiv, 5);
    } else {
        CLOCK_SetDiv(kCLOCK_CsiDiv, 7);
    }
    return 0;
}

int omv_csi_dma_memcpy(void *dma, void *dst, void *src, int bpp, bool transposed) {
    // EMDA will not perform burst transfers for anything less than 32-byte chunks of four 64-bit
    // beats. Additionally, the CSI hardware lacks cropping so we cannot align the source address.
    // Given this, performance will be lacking on cropped images. So much so that we do not use
    // the EDMA for anything less than 4-byte transfers otherwise you get sensor timeout errors.
    if (csi.dest_inc < MIN_EDMA_DST_INC) {
        return -1;
    }

    edma_handle_t *handle = dma;
    edma_transfer_config_t config;
    EDMA_PrepareTransferConfig(&config,
                               src, // srcAddr
                               csi.src_size, // srcWidth
                               csi.src_inc, // srcOffset
                               dst, // destAddr
                               transposed ? bpp : csi.dest_inc, // destWidth
                               transposed ? (MAIN_FB()->v * bpp) : csi.dest_inc, // destOffset
                               MAIN_FB()->u * bpp, // bytesEachRequest
                               MAIN_FB()->u * bpp); // transferBytes

    size_t retry = 3;
    status_t status = kStatus_EDMA_Busy;
    while (status == kStatus_EDMA_Busy) {
        status = EDMA_SubmitTransfer(handle, &config);
        if (status == kStatus_Success) {
            break;
        }
        if (--retry == 0) {
            // Drop the frame if EDMA is not keeping up as the image will be corrupt.
            csi.drop_frame = true;
            return 0;
        }
    }

    EDMA_TriggerChannelStart(handle->base, handle->channel);
    return 0;
}

int omv_csi_snapshot(omv_csi_t *csi, image_t *image, uint32_t flags) {
    // Used to restore MAIN_FB's width and height.
    uint32_t w = MAIN_FB()->u;
    uint32_t h = MAIN_FB()->v;

    if (csi->pixformat == PIXFORMAT_INVALID) {
        return OMV_CSI_ERROR_INVALID_PIXFORMAT;
    }

    if (csi->framesize == OMV_CSI_FRAMESIZE_INVALID) {
        return OMV_CSI_ERROR_INVALID_FRAMESIZE;
    }

    if (omv_csi_check_framebuffer_size() != 0) {
        return OMV_CSI_ERROR_FRAMEBUFFER_OVERFLOW;
    }

    // Compress the framebuffer for the IDE preview.
    framebuffer_update_jpeg_buffer();

    // Free the current FB head.
    framebuffer_free_current_buffer();

    // If the DMA is not active, reconfigure and restart the CSI transfer.
    if (!(CSI->CR18 & CSI_CR18_CSI_ENABLE_MASK)) {
        framebuffer_setup_buffers();

        uint32_t bytes_per_pixel = omv_csi_get_src_bpp();
        uint32_t dma_line_bytes = resolution[csi->framesize][0] * bytes_per_pixel;
        uint32_t length = dma_line_bytes * h;

        // Error out if the transfer size is not compatible with DMA transfer restrictions.
        if ((!dma_line_bytes)
            || (dma_line_bytes % sizeof(uint64_t))
            || (dma_line_bytes > (OMV_LINE_BUF_SIZE / 2))
            || (!length)
            || (length % DMA_LENGTH_ALIGNMENT)) {
            return OMV_CSI_ERROR_INVALID_FRAMESIZE;
        }

        #if defined(OMV_CSI_DMA)
        // The code below will enable EDMA data transfer from the line buffer for non-JPEG modes.
        if (csi->pixformat != PIXFORMAT_JPEG) {
            edma_config(csi, bytes_per_pixel);
            for (int i = 0; i < OMV_CSI_DMA_CHANNEL_COUNT; i++) {
                EDMA_CreateHandle(&csi->dma_channels[i], OMV_CSI_DMA, OMV_CSI_DMA_CHANNEL_START + i);
                EDMA_DisableChannelInterrupts(OMV_CSI_DMA, OMV_CSI_DMA_CHANNEL_START + i, kEDMA_MajorInterruptEnable);
            }
        }
        #endif

        if ((csi->pixformat == PIXFORMAT_RGB565 && csi->rgb_swap) ||
            (csi->pixformat == PIXFORMAT_YUV422 && csi->yuv_swap)) {
            CSI_REG_CR1(CSI) |= CSI_CR1_SWAP16_EN_MASK | CSI_CR1_PACK_DIR_MASK;
        } else {
            CSI_REG_CR1(CSI) &= ~(CSI_CR1_SWAP16_EN_MASK | CSI_CR1_PACK_DIR_MASK);
        }

        CSI_REG_IMAG_PARA(CSI) =
            (dma_line_bytes << CSI_IMAG_PARA_IMAGE_WIDTH_SHIFT) |
            (1 << CSI_IMAG_PARA_IMAGE_HEIGHT_SHIFT);

        // Configure and enable CSI interrupts.
        CSI_EnableInterrupts(CSI, CSI_IRQ_FLAGS);
        NVIC_EnableIRQ(CSI_IRQn);

        // Enable CSI
        CSI_REG_CR18(CSI) |= CSI_CR18_CSI_ENABLE_MASK;
    }

    // Let the camera know we want to trigger it now.
    #if defined(OMV_CSI_FSYNC_PIN)
    if (csi->frame_sync) {
        omv_gpio_write(OMV_CSI_FSYNC_PIN, 1);
    }
    #endif

    framebuffer_flags_t fb_flags = FB_NO_FLAGS;

    #if defined(OMV_CSI_DMA)
    // dest_inc will be less than MIN_EDMA_DST_INC if the EDMA is not initialized or unusable.
    if (csi->dest_inc >= MIN_EDMA_DST_INC) {
        fb_flags = FB_INVALIDATE;
    }
    #endif

    vbuffer_t *buffer = framebuffer_get_head(fb_flags);
    // Wait for the DMA to finish the transfer.
    for (mp_uint_t ticks = mp_hal_ticks_ms(); buffer == NULL;) {
        MICROPY_EVENT_POLL_HOOK
        if ((mp_hal_ticks_ms() - ticks) > OMV_CSI_TIMEOUT_MS) {
            omv_csi_abort(true, false);

            #if defined(OMV_CSI_FSYNC_PIN)
            if (csi->frame_sync) {
                omv_gpio_write(OMV_CSI_FSYNC_PIN, 0);
            }
            #endif

            return OMV_CSI_ERROR_CAPTURE_TIMEOUT;
        }
        buffer = framebuffer_get_head(fb_flags);
    }

    // We're done receiving data.
    #if defined(OMV_CSI_FSYNC_PIN)
    if (csi->frame_sync) {
        omv_gpio_write(OMV_CSI_FSYNC_PIN, 0);
    }
    #endif

    // The JPEG in the frame buffer is actually invalid.
    if (buffer->jpeg_buffer_overflow) {
        return OMV_CSI_ERROR_JPEG_OVERFLOW;
    }

    if (!csi->transpose) {
        MAIN_FB()->w = w;
        MAIN_FB()->h = h;
    } else {
        MAIN_FB()->w = h;
        MAIN_FB()->h = w;
    }

    // Fix the BPP.
    switch (csi->pixformat) {
        case PIXFORMAT_GRAYSCALE:
            MAIN_FB()->pixfmt = PIXFORMAT_GRAYSCALE;
            break;
        case PIXFORMAT_RGB565:
            MAIN_FB()->pixfmt = PIXFORMAT_RGB565;
            break;
        case PIXFORMAT_BAYER:
            MAIN_FB()->pixfmt = PIXFORMAT_BAYER;
            MAIN_FB()->subfmt_id = csi->cfa_format;
            MAIN_FB()->pixfmt = imlib_bayer_shift(MAIN_FB()->pixfmt, MAIN_FB()->x, MAIN_FB()->y, csi->transpose);
            break;
        case PIXFORMAT_YUV422: {
            MAIN_FB()->pixfmt = PIXFORMAT_YUV;
            MAIN_FB()->subfmt_id = csi->yuv_format;
            MAIN_FB()->pixfmt = imlib_yuv_shift(MAIN_FB()->pixfmt, MAIN_FB()->x);
            break;
        }
        case PIXFORMAT_JPEG: {
            int32_t size = 0;
            if (csi->chip_id == OV5640_ID) {
                // Offset contains the sum of all the bytes transferred from the offset buffers
                // while in omv_csi_line_callback().
                size = buffer->offset;
            } else {
                // OV2640 JPEG TODO
            }
            // Clean trailing data after 0xFFD9 at the end of the jpeg byte stream.
            MAIN_FB()->pixfmt = PIXFORMAT_JPEG;
            MAIN_FB()->size = jpeg_clean_trailing_bytes(size, buffer->data);
            break;
        }
        default:
            break;
    }

    // Set the user image.
    framebuffer_init_image(image);
    return 0;
}
